# Time-Serie-Forecasting

./: .gitignore  README.md  pyproject.toml  ruff.toml
notebooks/: forecast.ipynb
src/stock_forecast/: __init__.py  data.py  models.py  plot.py
