[project]
name = "stock-forecast"
version = "0.1.0"
description = "Time-series stock/commodity forecasting with Chronos and N-HiTS"
authors = [
    {name = "Andrea D'Amicis"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "transformers",
    "torch",
    "accelerate",
    "neuralforecast",
    "matplotlib",
    "plotly",
    "python-dotenv",
    "requests",
    "scipy",
    "chronos-forecasting (>=2.2.2,<3.0.0)",
    "statsmodels",
    "xgboost",
]

[tool.poetry]
packages = [{ include = "stock_forecast", from = "src" }]

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.0,<8.0.0"
jupyter = ">=1.0.0"
nbformat = ">=5.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
